<resources>
    <string name="app_name">ForgetMeNot</string>
    <string name="title">Title</string>
    <string name="category_name">Category Name</string>
    <string name="start_datetime">Start Datetime:</string>
    <string name="end_datetime">End Datetime:</string>

    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="info">Info</string>
    <string name="info_text"><b>Info</b>\n
        This app should help you not to forget any more things. You can create events for daily, weekly or yearly. You can also delete or edit the posts.\n\n
        <b>Developer</b>\n
            Harald Moitzi\n
            Sabrina Muhrer\n
    </string>
    <string name="add_category">Add Category</string>

    <string-array name="category">
        <item>Category</item>
        <item>Med</item>
        <item>Sport</item>
        <item>Shopping</item>
        <item>Important</item>
        <item>Others</item>
    </string-array>
    <string name="warning">Please give the event a name</string>

    <string name="dialog_delete_event_title">Really delete Event?</string>
    <string name="dialog_delete_root_event_message">Please note that deleting the first event of a series, will delete the whole series</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_edit_or_delete_title">Edit or Delete Event?</string>
    <string name="dialog_edit_or_delete_message">Please choose your option</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_edit">Edit</string>

</resources>